//*****************************************************************************
/// \copyright (c) 2019,2019 by Seidenader Maschinenbau GmbH
/// \file Overlay.proto
/// All Rights Reserved
//*****************************************************************************
/// Protobuf containing messages describing pattern analyzer.
//******************************************************************************

syntax = "proto3";
package SvPb;

message Point
{
	uint32 x = 1;
	uint32 y = 2;
}
message Rect
{
	uint32 left = 1;
	uint32 top = 2;
	uint32 right = 3;
	uint32 bottom = 4;
}

message RectSize
{
	uint32 sizeX = 1;
	uint32 sizeY = 2;
}

enum OverscanRectKindEnum
{
	InnerRect = 0;
	OuterRect = 1;
}

message ComputeOverscanRectRequest
{
	Point point = 1;
	RectSize size = 2;
	OverscanRectKindEnum  rectKind = 3;
}

message ComputeOverscanRectResponse
{
	Rect overscanRect = 1;
}

 